--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,10 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: digital_galleries_production
-  username: BootUp
-  password: <%= ENV['BOOTUP_DATABASE_PASSWORD'] %>
+  adapter: mysql2
+  pool: 5
+  timeout: 5000
+  username: bbdaca87d69915
+  password: 15edd7ed
+  database: heroku_82d1bc2b4f19e21
+  host: us-cdbr-iron-east-02.cleardb.net
